@@ -1,5 +1,10 @@
 2008-11-01  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/versioncontrol/tarball.py: added helpful message when a
+	tarball branch is not correct.
+
+2008-11-01  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/commands/base.py: ignore errors loading bootstrap modules
 	when checking for its uptodateness.
 
